# graph-agent

./: .env.example  .eslintrc.js  .gitignore  AGENTS.md  COORDINATORS_MANAGERS_ANALYSIS.md  Cargo.toml  QWEN.md  README.md  REFACTORING_CHECKLIST.md  REFACTORING_DOMAIN_SERVICES.md  REFACTOR_IMPLEMENTATION.md  REFACTOR_SUMMARY.md  SDK_IMPLEMENTATION_GUIDE.md  SDK_MANAGERS_REFACTOR.md  SDK_MANAGERS_REFACTOR_SUMMARY.md  TOKEN_USAGE_TRACKER_ANALYSIS.md  eslint.config.js  fix_imports.py  fix_imports_final.py  fix_sdk_types_imports.py  jest.config.cjs  jest.config.js  jest.config.mjs  package.json  pnpm-workspace.yaml  restore_internal_imports.py  tsconfig.json  tsconfig.test.json  turbo.json  vitest.config.mjs
.roo/: system-prompt-architect  system-prompt-code  system-prompt-debug  system-prompt-plain
application/: index.ts
apps/: package.json
configs/: global.toml
docs/: FUNCTION_DESIGN.md  TYPE_DEFINITION_ANALYSIS.md  checkpoint-config-enhancement-v2.md  checkpoint-entity-design-analysis.md  checkpoint-migration-summary.md  common-types-usage-analysis.md  composition-analysis-report.md  condition-function-architecture.md  config-loading-module-design.md  config-manager-refactor-analysis.md  config-parsing-storage-analysis.md  config-system-design.md  config-system-gap-analysis.md  container-architecture-design.md  core-layer-modification-analysis.md  domain-entities-design-analysis.md  domain-refactoring-summary.md  edge-function-condition-integration.md  error_handler.md  execution-engine-architecture-analysis.md  function-registry-usage-analysis.md  global-checkpoint-analysis.md  graph-domain-analysis.md  graph-domain-implementation-guide.md  graph-domain-implementation-plan.md  hook-architecture-refactoring.md  hook-functions-usage.md  hook-payload-redesign-proposal.md  hook-simplification-proposal.md  infrastructure-refactoring-revised-implementation-plan.md  llm-clients-architecture-redesign.md  (+23 more)
(+4417 files in other folders)
