[package]
name = "graph-agent"
version = "0.1.0"
edition = "2021"
authors = ["GraphDB Team"]
description = "A lightweight, high-performance graph database for local single-node deployment"
license = "MIT OR Apache-2.0"
repository = "https://github.com/graphdb/graph-agent"
keywords = ["graph", "database", "workflow", "llm", "state-management"]
categories = ["database", "data-structures"]

[dependencies]
# 核心依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "stream"] }

# 配置管理
config = "0.13"
dotenvy = "0.15"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 并发工具
parking_lot = "0.12"
dashmap = "5.0"

# 工具库
once_cell = "1.0"
lazy_static = "1.0"
regex = "1.0"

# 测试依赖
[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.0"

# 性能测试依赖
[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

# 基准测试 (将在创建实际基准文件后启用)
# [[bench]]
# name = "workflow_execution"
# harness = false

# [[bench]]
# name = "state_management"
# harness = false

# 二进制目标
[[bin]]
name = "graph-agent"
path = "src/main.rs"

# 库目标
[lib]
name = "graph_agent"
path = "src/lib.rs"

# 特性标志
[features]
default = ["postgres", "openai"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
openai = []
anthropic = []
all-providers = ["openai", "anthropic"]

# 配置优化
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
overflow-checks = true